--- a/src/Blazor/RebacExperiments.Blazor/Localization/SharedResource.resx
+++ b/src/Blazor/RebacExperiments.Blazor/Localization/SharedResource.resx
@@ -192,6 +192,9 @@
   <data name="TaskItemPriorityEnum_Normal" xml:space="preserve">
     <value>Normal</value>
   </data>
+  <data name="TaskItemPriorityEnum_Select" xml:space="preserve">
+    <value>Select a Task Priority ...</value>
+  </data>
   <data name="Validation_IsRequired" xml:space="preserve">
     <value>{0} is required</value>
   </data>
