--- a/src/Blazor/RebacExperiments.Blazor/Localization/SharedResource.resx
+++ b/src/Blazor/RebacExperiments.Blazor/Localization/SharedResource.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DataGrid_Button_Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="DataGrid_Button_Details" xml:space="preserve">
+    <value>Details</value>
+  </data>
+  <data name="DataGrid_Button_Edit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
   <data name="FilterOperatorEnum_After" xml:space="preserve">
     <value>After</value>
   </data>
@@ -194,6 +203,15 @@
   </data>
   <data name="TaskItemPriorityEnum_Select" xml:space="preserve">
     <value>Select a Task Priority ...</value>
+  </data>
+  <data name="TaskItem_Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="TaskItem_TaskItemPriority" xml:space="preserve">
+    <value>Priority</value>
+  </data>
+  <data name="TaskItem_Title" xml:space="preserve">
+    <value>Title</value>
   </data>
   <data name="Validation_IsRequired" xml:space="preserve">
     <value>{0} is required</value>
