Add Error Overview and Links

--- a/src/Blazor/RebacExperiments.Blazor/Localization/SharedResource.resx
+++ b/src/Blazor/RebacExperiments.Blazor/Localization/SharedResource.resx
@@ -153,6 +153,9 @@
   <data name="ApplicationError_Exception" xml:space="preserve">
     <value>An unexpected application error occured. Try contacting the support.</value>
   </data>
+  <data name="ClientError_UnexpectedError" xml:space="preserve">
+    <value>An unexpected error occured</value>
+  </data>
   <data name="DataGrid_Button_Delete" xml:space="preserve">
     <value>Delete</value>
   </data>
@@ -161,9 +164,6 @@
   </data>
   <data name="DataGrid_Button_Edit" xml:space="preserve">
     <value>Edit</value>
-  </data>
-  <data name="DefaultErrorKey" xml:space="preserve">
-    <value>An unexpected error occured</value>
   </data>
   <data name="FilterOperatorEnum_After" xml:space="preserve">
     <value>After</value>
