--- a/src/Blazor/RebacExperiments.Blazor/Localization/SharedResource.resx
+++ b/src/Blazor/RebacExperiments.Blazor/Localization/SharedResource.resx
@@ -243,6 +243,9 @@
   <data name="Login_RememberMe" xml:space="preserve">
     <value>Remember Me</value>
   </data>
+  <data name="Message_Error_Title" xml:space="preserve">
+    <value>Error</value>
+  </data>
   <data name="Message_ShowHelp" xml:space="preserve">
     <value>Show Help</value>
   </data>
